# sysopy

./: README.md  clean.sh  new.sh  tar.sh
GrocholaPawel/: test.c
GrocholaPawel/cw01/: README.md
GrocholaPawel/cw01/zad1/: CMakeLists.txt  address_book.c  address_book.h  comparators.c  comparators.h  linked_list.c  linked_list.h  tools.h  tree.c  tree.h
GrocholaPawel/cw01/zad2/: address_book_benchmark.c
GrocholaPawel/cw01/zad3a/: CMakeLists.txt  results.txt
GrocholaPawel/cw01/zad3b/: CMakeLists.txt  cm.sh  results.txt
GrocholaPawel/cw01/zad4/: gdb.txt
GrocholaPawel/cw02/: README.md
GrocholaPawel/cw02/common/options/: CMakeLists.txt
GrocholaPawel/cw02/common/options/src/: options.c  options.h
GrocholaPawel/cw02/zad1/: CMakeLists.txt  generate.sh  test_command.sh  wyniki.txt  zad1.sh
GrocholaPawel/cw02/zad1/src/: file_manip.c  file_manip.h  filefunc.c  filefunc.h  main.c  misc.c  misc.h
GrocholaPawel/cw02/zad2/: CMakeLists.txt
GrocholaPawel/cw02/zad2/src/: dir_tools.c  dir_tools.h  dirsearch.c  dirsearch.h  main.c
GrocholaPawel/cw02/zad3/: CMakeLists.txt
GrocholaPawel/cw02/zad3/src/: locks.c  locks.h  main.c  misc.c  misc.h
GrocholaPawel/cw03/: README.md
GrocholaPawel/cw03/test/: CMakeLists.txt  script_cpu  script_env  script_return  test_cpu.c  test_env.c  test_return.c
GrocholaPawel/cw03/zad1/: CMakeLists.txt
GrocholaPawel/cw03/zad1/src/: errors.c  errors.h  main.c  misc.c  misc.h  script.c  script.h
GrocholaPawel/cw03/zad2/: CMakeLists.txt
GrocholaPawel/cw04/: README.md
GrocholaPawel/cw04/zad1/: CMakeLists.txt
GrocholaPawel/cw04/zad1/src/: main.c
GrocholaPawel/cw04/zad2/: CMakeLists.txt
GrocholaPawel/cw04/zad2/src/: main.c  stack.c  stack.h  utils.h
GrocholaPawel/cw04/zad3/: CMakeLists.txt
GrocholaPawel/cw04/zad3/src/: main.c  send_receive_signals.c  send_receive_signals.h  utils.c
GrocholaPawel/cw05/: README.md
GrocholaPawel/cw05/zad1/: CMakeLists.txt
GrocholaPawel/cw05/zad1/src/: main.c  misc.c  misc.h
GrocholaPawel/cw05/zad2/: CMakeLists.txt
GrocholaPawel/cw05/zad2/src/: master.c  slave.c
GrocholaPawel/cw06/: README.md
GrocholaPawel/cw06/zad1/: CMakeLists.txt
GrocholaPawel/cw06/zad1/src/: client.c  queue_common.c  queue_common.h  server.c  utils.c
GrocholaPawel/cw06/zad2/: CMakeLists.txt
GrocholaPawel/cw06/zad2/src/: client.c  queue_common.c  queue_common.h  server.c  utils.c  utils.h
GrocholaPawel/cw07/: README.md
GrocholaPawel/cw07/zad1/: CMakeLists.txt
GrocholaPawel/cw07/zad1/src/: barber.c  barbershop.h  customers.c  logger.c  queue.c  semaphores.c  semaphores.h  shared_mem.c  shared_mem.h  utils.c  utils.h
GrocholaPawel/cw07/zad2/: CMakeLists.txt
GrocholaPawel/cw07/zad2/src/: barber.c  barbershop.c  barbershop.h  customers.c  logger.h  queue.h  semaphores.c  semaphores.h  shared_mem.c  shared_mem.h
GrocholaPawel/cw08/: README.md
GrocholaPawel/cw08/zad1/: CMakeLists.txt  file
GrocholaPawel/cw08/zad1/src/: CMakeLists.txt  generator.c  main.c
GrocholaPawel/cw08/zad2/: CMakeLists.txt  zad2.raport
GrocholaPawel/cw08/zad2/src/: main.c
GrocholaPawel/cw09/: README.md
GrocholaPawel/cw09/zad1/: CMakeLists.txt
GrocholaPawel/cw09/zad1/src/: logger.h  main.c  main.h  threads.h  threads_mutex_pthread.c  threads_sem_posix.c  utils.c  utils.h
GrocholaPawel/cw10/: README.md
GrocholaPawel/cw10/zad1/: CMakeLists.txt
GrocholaPawel/cw10/zad1/src/: array.c  array.h  client.c  logger.c  messages.h  server.c
GrocholaPawel/cw10/zad2/: CMakeLists.txt
GrocholaPawel/cw10/zad2/src/: client.c  messages.h  server.c  utils.c  utils.h
GrocholaPawel/template/: CMakeLists_main.txt  main.c
